# NVIDIA_Challenge

./: .gitignore  AUTORESEARCH_RUNBOOK.md  CLAUDE.md  GCP_SETUP.md  KAGGLE_SETUP.md  NVIDIA_NEMOTRON_REASONING_WIKI.md  README.md  program.md  pyproject.toml  setup_vm.sh  train.py
.firecrawl/: axolotl.md  credits.json  discussion-681714.md  discussion-681745.md  discussion-686995.md  discussion-687798.md  discussion-688461.md  discussion-691125.md  discussion-691978.md  discussion-index.md  install-check.md  kaggle-competition.md  kaggle-metric.md  kaggle-overview.md  kaggle-submission-demo.md  lm-eval.md  nvidia-nemo-nemotron.md  peft.md  tonghuikang-nemotron.md  track1-data.md  track1-nvidia-search.json  track1-official-search.json  track1-overview-abstract.md  track1-overview-description.md  track1-overview-evaluation.md  track1-overview-timeline.md  track1-rules.md  track3-competition.json  track3-cot-latent.json  track3-inference-scaling.json  track3-long-context-eval.json  track3-self-consistency-tool-use.json  track3-verifier-reranker.json  vllm.md
.firecrawl/wiki/: READING_LIST.md  WIKI.md
autorae/: prepare.py  train.py
autoresearch-nemotron/: GCP_SETUP.md  README.md  config.py  create_submission.py  gcp_connect.sh  gcp_stop.sh  monitor.sh  prepare.py  program.md  pyproject.toml  requirements.txt  run_training.sh  setup_gcp.sh  sync_results.sh  train.py
kaggle/: train.py
