[project]
name = "autorae"
version = "0.1.0"
description = "Autonomous research on Nemotron-3-Nano-30B LoRA fine-tuning for reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "vllm>=0.4.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.41.0",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
