[project]
name = "autoresearch-nemotron"
version = "0.1.0"
description = "Adapted autoresearch for NVIDIA Nemotron Model Reasoning Challenge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NVIDIA", email = "info@nvidia.com"}
]
keywords = ["nlp", "reasoning", "lora", "nemotron", "grpo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "regex>=2023.0.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
flash-attn = [
    "flash-attn>=2.5.0",
]
wandb = [
    "wandb>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/karpathy/autoresearch"
Repository = "https://github.com/karpathy/autoresearch"
Documentation = "https://github.com/karpathy/autoresearch"
Competition = "https://www.kaggle.com/competitions/nvidia-nemotron-model-reasoning-challenge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
